cpp_sdk/examples/sdk_test_cpp/src/errorcompile.txt
In file included from sdk_test.cpp:1:
In file included from .\sdk_test.h:4:
../../../sdk/include\spacetimedb/macros.h:279:16: error: unknown type name 'Register'
  279 |         static Register##SanitizedCppTypeName register_##SanitizedCppTypeName##_instance; \
      |                ^
../../../sdk/include\spacetimedb/macros.h:279:24: error: expected unqualified-id
  279 |         static Register##SanitizedCppTypeName register_##SanitizedCppTypeName##_instance; \
      |                        ^
../../../sdk/include\spacetimedb/macros.h:280:5: error: extraneous closing brace ('}')
  280 |     }} \
      |     ^
../../../sdk/include\spacetimedb/macros.h:280:6: error: extraneous closing brace ('}')
  280 |     }} \
      |      ^
../../../sdk/include\spacetimedb/macros.h:283:9: error: unknown type name 'CppTypeName'
  283 |         CppTypeName deserialize_##SanitizedCppTypeName(::bsatn::Reader& reader); \
      |         ^
../../../sdk/include\spacetimedb/macros.h:283:33: error: expected ';' after top level declarator
  283 |         CppTypeName deserialize_##SanitizedCppTypeName(::bsatn::Reader& reader); \
      |                                 ^
      |                                 ;
../../../sdk/include\spacetimedb/macros.h:285:62: error: unknown type name 'CppTypeName'
  285 |         inline void serialize(::bsatn::Writer& writer, const CppTypeName& value) { \
      |                                                              ^
../../../sdk/include\spacetimedb/macros.h:286:26: error: use of undeclared identifier 'SPACETIMEDB_XX_SERIALIZE_FIELD'
  286 |             FIELDS_MACRO(SPACETIMEDB_XX_SERIALIZE_FIELD, writer, value); \
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:291:16: error: unknown type name 'CppTypeName'
  291 |         inline CppTypeName deserialize<CppTypeName>(::bsatn::Reader& reader) { \
      |                ^
../../../sdk/include\spacetimedb/macros.h:291:40: error: use of undeclared identifier 'CppTypeName'
  291 |         inline CppTypeName deserialize<CppTypeName>(::bsatn::Reader& reader) { \
      |                                        ^~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:295:16: error: unknown type name 'CppTypeName'
  295 |         inline CppTypeName deserialize_##SanitizedCppTypeName(::bsatn::Reader& reader) { \
      |                ^
../../../sdk/include\spacetimedb/macros.h:295:40: error: expected ';' after top level declarator
  295 |         inline CppTypeName deserialize_##SanitizedCppTypeName(::bsatn::Reader& reader) { \
      |                                        ^
      |                                        ;
In file included from sdk_test.cpp:1:
.\sdk_test.h:47:1: error: no function template matches function template specialization 'deserialize'
   47 | SPACETIMEDB_TYPE_ENUM(
      | ^
../../../sdk/include\spacetimedb/macros.h:90:28: note: expanded from macro 'SPACETIMEDB_TYPE_ENUM'
   90 |         inline CppTypeName deserialize<CppTypeName>(::bsatn::Reader& reader) { \
      |                            ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:81:9: error: no member named 'SPACETIMEDB_FIELD_INTERNAL' in namespace 'SpacetimeDb'; did you mean simply 'SPACETIMEDB_FIELD_INTERNAL'?
   81 |         SPACETIMEDB_FIELD("b", ::SpacetimeDb::CoreType::U8, false, false)
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:38:5: note: expanded from macro 'SPACETIMEDB_FIELD'
   38 |     ::SpacetimeDb::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |     ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:22:39: note: 'SPACETIMEDB_FIELD_INTERNAL' declared here
   22 | inline ::SpacetimeDb::FieldDefinition SPACETIMEDB_FIELD_INTERNAL(const char* name, ::SpacetimeDb::CoreType core_type, const char* user_defined_name, bool is_optional, bool is_unique_field, bool is_auto_inc_field) {
      |                                       ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:142:9: error: no member named 'SPACETIMEDB_FIELD_INTERNAL' in namespace 'SpacetimeDb'; did you mean simply 'SPACETIMEDB_FIELD_INTERNAL'?
  142 |         SPACETIMEDB_FIELD("a", ::SpacetimeDb::CoreType::U8, false, false),
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:38:5: note: expanded from macro 'SPACETIMEDB_FIELD'
   38 |     ::SpacetimeDb::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |     ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:22:39: note: 'SPACETIMEDB_FIELD_INTERNAL' declared here
   22 | inline ::SpacetimeDb::FieldDefinition SPACETIMEDB_FIELD_INTERNAL(const char* name, ::SpacetimeDb::CoreType core_type, const char* user_defined_name, bool is_optional, bool is_unique_field, bool is_auto_inc_field) {
      |                                       ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:143:9: error: no member named 'SPACETIMEDB_FIELD_INTERNAL' in namespace 'SpacetimeDb'; did you mean simply 'SPACETIMEDB_FIELD_INTERNAL'?
  143 |         SPACETIMEDB_FIELD("b", ::SpacetimeDb::CoreType::U16, false, false),
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:38:5: note: expanded from macro 'SPACETIMEDB_FIELD'
   38 |     ::SpacetimeDb::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |     ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:22:39: note: 'SPACETIMEDB_FIELD_INTERNAL' declared here
   22 | inline ::SpacetimeDb::FieldDefinition SPACETIMEDB_FIELD_INTERNAL(const char* name, ::SpacetimeDb::CoreType core_type, const char* user_defined_name, bool is_optional, bool is_unique_field, bool is_auto_inc_field) {
      |                                       ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:144:9: error: no member named 'SPACETIMEDB_FIELD_INTERNAL' in namespace 'SpacetimeDb'; did you mean simply 'SPACETIMEDB_FIELD_INTERNAL'?
  144 |         SPACETIMEDB_FIELD("c", ::SpacetimeDb::CoreType::U32, false, false),
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:38:5: note: expanded from macro 'SPACETIMEDB_FIELD'
   38 |     ::SpacetimeDb::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |     ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:22:39: note: 'SPACETIMEDB_FIELD_INTERNAL' declared here
   22 | inline ::SpacetimeDb::FieldDefinition SPACETIMEDB_FIELD_INTERNAL(const char* name, ::SpacetimeDb::CoreType core_type, const char* user_defined_name, bool is_optional, bool is_unique_field, bool is_auto_inc_field) {
      |                                       ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:145:9: error: no member named 'SPACETIMEDB_FIELD_INTERNAL' in namespace 'SpacetimeDb'; did you mean simply 'SPACETIMEDB_FIELD_INTERNAL'?
  145 |         SPACETIMEDB_FIELD("d", ::SpacetimeDb::CoreType::U64, false, false),
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:38:5: note: expanded from macro 'SPACETIMEDB_FIELD'
   38 |     ::SpacetimeDb::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |     ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:22:39: note: 'SPACETIMEDB_FIELD_INTERNAL' declared here
   22 | inline ::SpacetimeDb::FieldDefinition SPACETIMEDB_FIELD_INTERNAL(const char* name, ::SpacetimeDb::CoreType core_type, const char* user_defined_name, bool is_optional, bool is_unique_field, bool is_auto_inc_field) {
      |                                       ^
In file included from sdk_test.cpp:1:
.\sdk_test.h:146:9: error: no member named 'SPACETIMEDB_FIELD_INTERNAL' in namespace 'SpacetimeDb'; did you mean simply 'SPACETIMEDB_FIELD_INTERNAL'?
  146 |         SPACETIMEDB_FIELD("e", ::SpacetimeDb::CoreType::U128, false, false),
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:38:5: note: expanded from macro 'SPACETIMEDB_FIELD'
   38 |     ::SpacetimeDb::SPACETIMEDB_FIELD_INTERNAL(FieldNameStr, FieldCoreType, nullptr, false, IsUniqueBool, IsAutoIncBool)
      |     ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../sdk/include\spacetimedb/macros.h:22:39: note: 'SPACETIMEDB_FIELD_INTERNAL' declared here
   22 | inline ::SpacetimeDb::FieldDefinition SPACETIMEDB_FIELD_INTERNAL(const char* name, ::SpacetimeDb::CoreType core_type, const char* user_defined_name, bool is_optional, bool is_unique_field, bool is_auto_inc_field) {
      |                                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
emcc: error: ''C:/Users/ludvi/emsdk/upstream/bin\clang.exe' -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr '--sysroot=C:\Users\ludvi\emsdk\upstream\emscripten\cache\sysroot' -DEMSCRIPTEN -Xclang '-iwithsysroot/include\fakesdl' -Xclang '-iwithsysroot/include\compat' -std=c++20 -I../../../sdk/include -c sdk_test.cpp -o 'C:\Users\ludvi\AppData\Local\Temp\emscripten_temp_7zegc2ze\sdk_test_0.o'' failed (returned 1)
